--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Wypisz zawartosc katalogu
         run: ls -la
 
-      - name: nowy krok zadanie 7
-        run: npx eslint . --ext .js,.jsx,.ts,.tsx
+      # - name: nowy krok zadanie 7
+        # run: npx eslint . --ext .js,.jsx,.ts,.tsx
         
       - name: Komunikat koncowy
         run: echo "GitHub Actions dziala poprawnie 🎉"
